Improvement on Assessment APIs and error handling and responses